XMLExper/m12/m12_130_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLNode* tinyxml2::XMLNode::DeepClone(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:884:73: error: cannot dynamic_cast ‘child’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLComment*’ (conversion casts away constness)
  884 |   XMLNode* childClone = /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(child)->DeepClone(target);
      |                                                                         ^
diff: tinyxml2.o: No such file or directory
